lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:14: error: type mismatch;
 found   : Double
 required: Int
			b=getSol()(i).y
                                      ^